dreamhouse-data-model/main/default/objects/Broker__c/fields/Broker_Id__c.field-meta.xml
<CustomField>
    <fullName>Broker_Id__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <externalId>true</externalId>
    <label>Broker Id</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>