dreamhouse-data-model/main/default/objects/Broker__c/fields/Mobile_Phone__c.field-meta.xml
<CustomField>
    <fullName>Mobile_Phone__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <label>Mobile Phone</label>
    <type>Phone</type>
</CustomField>