dreamhouse-data-model/main/default/objects/Broker__c/fields/Phone__c.field-meta.xml
<CustomField>
    <fullName>Phone__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <label>Phone</label>
    <type>Phone</type>
</CustomField>